add recommended and channel sliders

--- a/youtube/src/pages/html/HomePage.html
+++ b/youtube/src/pages/html/HomePage.html
@@ -164,34 +164,50 @@
 
   <main class="main_content">
    <div class="bloggers__scroll_container">
-    <div class="blogger_name_layer">
-     <img
-      src="./../../assets/images/mainContent/icons/girl.png"
-      alt="blogger"
-     />
-     <h1>Dollie Blair</h1>
-    </div>
-    <div class="scroll__container">
-     <!-- <div class="scroll__card">
-      <div class="slide__image-wrapper">
-       <img
-        src="./../../assets/images/mainContent/blogger/slide1.png"
-        alt=""
-        class="slide__image"
-       />
-       <p class="timer">4:15</p>
-      </div>
+    <div class="blogger__layer">
+     <div class="name_field">
+      <img
+       src="./../../assets/images/mainContent/icons/girl.png"
+       alt="blogger"
+      />
+      <h1>Dollie Blair</h1>
+     </div>
 
-      <h4 class="video__name">A Brief History Of Creation</h4>
-      <div class="video__info">
-       <p>80k views · 3 days ago</p>
-       <p>Dollie Blair</p>
-      </div>
-     </div> -->
+     <div class="arrow-container">
+      <button class="arrow-btn">
+       <span class="arrow left"></span>
+      </button>
+      <button class="arrow-btn">
+       <span class="arrow right"></span>
+      </button>
+     </div>
     </div>
+    <div class="scroll__container" id="blogger"></div>
+   </div>
+
+   <div class="bloggers__scroll_container">
+    <div class="blogger__layer">
+     <div class="name_field">
+      <img
+       src="./../../assets/images/mainContent/icons/food.png"
+       alt="blogger"
+      />
+      <h1>Food & Drink</h1>
+
+      <p class="recommended_paragrapgh">Recommended channel for you</p>
+     </div>
+     <div class="arrow-container">
+      <button class="arrow-btn">
+       <span class="arrow left"></span>
+      </button>
+      <button class="arrow-btn">
+       <span class="arrow right"></span>
+      </button>
+     </div>
+    </div>
+    <div class="scroll__container" id="channel"></div>
    </div>
   </main>
   <script src="./../../assets/scripts/slide.js" type="module"></script>
  </body>
- 
 </html>
