--- a/youtube/src/pages/html/HomePage.html
+++ b/youtube/src/pages/html/HomePage.html
@@ -165,24 +165,24 @@
   <main class="main_content">
    <div class="bloggers__scroll_container">
     <div class="blogger__layer">
-        <div class="name_field">
-        <img
-        src="./../../assets/images/mainContent/icons/girl.png"
-        alt="blogger"
-        />
-        <h1>Dollie Blair</h1>
-        </div>
+     <div class="name_field">
+      <img
+       src="./../../assets/images/mainContent/icons/girl.png"
+       alt="blogger"
+      />
+      <h1>Dollie Blair</h1>
+     </div>
 
-        <div class="arrow-container">
-        <button class="arrow-btn">
-        <span class="arrow left"></span>
-        </button>
-        <button class="arrow-btn">
-        <span class="arrow right"></span>
-        </button>
-        </div>
+     <div class="arrow-container">
+      <button class="arrow-btn">
+       <span class="arrow left"></span>
+      </button>
+      <button class="arrow-btn">
+       <span class="arrow right"></span>
+      </button>
+     </div>
     </div>
-    
+
     <div class="scroll__container" id="blogger"></div>
    </div>
 
@@ -227,6 +227,26 @@
    </div>
   </main>
 
+  <nav class="mobile-navbar">
+   <ul class="mobile-navbar__list">
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/Combined-Shape.svg" alt="Home" />
+     <p>Home</p>
+    </li>
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/ui-01.svg" alt="Trending" />
+     <p>Trending</p>
+    </li>
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/ui-45.svg" alt="Subs" />
+     <p>Subscriptions</p>
+    </li>
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/documents-11.svg" alt="Settings" />
+     <p>Library</p>
+    </li>
+   </ul>
+  </nav>
   <script src="./../../assets/scripts/slide.js" type="module"></script>
  </body>
 </html>
