--- a/youtube/src/pages/html/HomePage.html
+++ b/youtube/src/pages/html/HomePage.html
@@ -215,6 +215,9 @@
       <p class="recommended_paragrapgh">Recommended channel for you</p>
      </div>
      <div class="arrow-container">
+        <button class="subscribe-btn">
+            Subscribe 2.3m
+        </button>
       <button class="arrow-btn">
        <span class="arrow left"></span>
       </button>
