--- a/youtube/src/pages/html/ChannelPage.html
+++ b/youtube/src/pages/html/ChannelPage.html
@@ -25,6 +25,12 @@
        class="navbar__logo"
       />
      </a>
+     <a href="#" class="header_mobile_ref">
+      <div class="navbar__logo_container_mobile">
+       <img src="./../../assets/images/YTLogo.svg" alt="ClearLogo" />
+       <p class="header_name_mobil">Margaret Phelps</p>
+      </div>
+     </a>
     </div>
 
     <div class="right_navbar">
@@ -65,6 +71,7 @@
         alt="User Avatar"
         class="navbar__avatar"
        />
+       <button class="exrta_dots-button"><p class="exrta_dots">⋮</p></button>
       </li>
      </ul>
     </div>
@@ -189,11 +196,10 @@
      </div>
     </div>
    </div>
-
    <div class="channel_layout">
     <div class="left_container">
      <nav class="channel_navigation">
-      <ul >
+      <ul>
        <li><button>Home</button></li>
        <li><button>Videos</button></li>
        <li><button>Playlists</button></li>
@@ -215,7 +221,7 @@
         alt=""
         class="video_image"
        />
-       <p class="timer">7:36</p>
+       <p class="timer-preview">7:36</p>
       </div>
       <div class="video_description">
        <h1>Choosing The Best Audio Player Software For Your Computer</h1>
@@ -232,12 +238,65 @@
     <div class="right_container">
      <h5>Recommended channel</h5>
      <div class="recommended_channels">
-      <div><img src="./../../assets/images/channelImages/channels/channel1.png" alt="1"><p>Flora Benson</p></div>
-      <div><img src="./../../assets/images/channelImages/channels/channel2.png" alt="2"><p>Violet Cobb</p></div>
-      <div><img src="./../../assets/images/channelImages/channels/channel3.png" alt="3"><p>Phillip Mullins</p></div>
+      <div>
+       <img
+        src="./../../assets/images/channelImages/channels/channel1.png"
+        alt="1"
+       />
+       <p>Flora Benson</p>
+      </div>
+      <div>
+       <img
+        src="./../../assets/images/channelImages/channels/channel2.png"
+        alt="2"
+       />
+       <p>Violet Cobb</p>
+      </div>
+      <div>
+       <img
+        src="./../../assets/images/channelImages/channels/channel3.png"
+        alt="3"
+       />
+       <p>Phillip Mullins</p>
+      </div>
      </div>
     </div>
    </div>
+   <div class="bloggers__scroll_container">
+    <div class="blogger__layer">
+     <h1 class="channel-name-for-scroll">Margaret Phelps videos</h1>
+     <div class="arrow-container">
+      <button class="arrow-btn">
+       <span class="arrow left"></span>
+      </button>
+      <button class="arrow-btn">
+       <span class="arrow right"></span>
+      </button>
+     </div>
+    </div>
+    <div class="scroll__container" id="blogger"></div>
+   </div>
   </main>
+  <nav class="mobile-navbar">
+   <ul class="mobile-navbar__list">
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/Combined-Shape.svg" alt="Home" />
+     <p>Home</p>
+    </li>
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/ui-01.svg" alt="Trending" />
+     <p>Trending</p>
+    </li>
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/ui-45.svg" alt="Subs" />
+     <p>Subscriptions</p>
+    </li>
+    <li class="mobile-navbar__item">
+     <img src="./../../assets/images/sidebar/documents-11.svg" alt="Settings" />
+     <p>Library</p>
+    </li>
+   </ul>
+  </nav>
+  <script src="./../../assets/scripts/slide.js" type="module"></script>
  </body>
 </html>
