--- a/youtube/src/pages/html/ChannelPage.html
+++ b/youtube/src/pages/html/ChannelPage.html
@@ -196,6 +196,14 @@
      </div>
     </div>
    </div>
+   <nav class="channel_navigation-mobile">
+      <ul>
+       <li><button>Home</button></li>
+       <li><button>Videos</button></li>
+       <li><button>Playlists</button></li>
+       <li><button><img src="./../../assets/images/channelImages/downArrow.svg" alt=""></button></li>
+      </ul>
+   </nav>
    <div class="channel_layout">
     <div class="left_container">
      <nav class="channel_navigation">
@@ -213,6 +221,7 @@
        </li>
       </ul>
      </nav>
+     
 
      <div class="video_preview">
       <div class="video_image_container">
@@ -277,6 +286,7 @@
     <div class="scroll__container" id="blogger"></div>
    </div>
   </main>
+
   <nav class="mobile-navbar">
    <ul class="mobile-navbar__list">
     <li class="mobile-navbar__item">
@@ -297,6 +307,7 @@
     </li>
    </ul>
   </nav>
+
   <script src="./../../assets/scripts/slide.js" type="module"></script>
  </body>
 </html>
