--- a/youtube/src/pages/html/HomePage.html
+++ b/youtube/src/pages/html/HomePage.html
@@ -9,6 +9,10 @@
    href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap"
    rel="stylesheet"
   />
+  <link 
+    rel="stylesheet"
+    href="./../../assets/styles/HomePage.css"
+  >
  </head>
  <body>
   <header class="header_navbar_container">
